--- a/app/src/main/res/layout/activity_input4.xml
+++ b/app/src/main/res/layout/activity_input4.xml
@@ -22,6 +22,30 @@
             android:textSize="24sp"
             android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/tvNotifKakek"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="32dp"
+            android:text="Kakek dilewati karena sudah terhalang(mahjub) oleh ayah"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvNotifNenek"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="32dp"
+            android:text="Nenek dilewati karena sudah terhalang(mahjub) oleh ibu"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
         <CheckBox
             android:id="@+id/cbKakek"
             android:layout_width="match_parent"
