--- a/app/src/main/res/layout/activity_input5.xml
+++ b/app/src/main/res/layout/activity_input5.xml
@@ -23,6 +23,18 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tvNotifSaudaraKd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="32dp"
+            android:text="Saudara laki-laki dan Saudara perempuan kandung dilewati karena sudah terhalang(mahjub) oleh kakek"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
+        <TextView
             android:id="@+id/tvSaudaraLkKd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
