--- a/app/src/main/res/layout/activity_input7.xml
+++ b/app/src/main/res/layout/activity_input7.xml
@@ -22,6 +22,19 @@
             android:textSize="24sp"
             android:textStyle="bold" />
 
+
+        <TextView
+            android:id="@+id/tvNotifKeponakan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="32dp"
+            android:text="Keponakan laki-laki dari Saudara laki-laki kandung dan Keponakan laki-laki dari Saudara laki-laki se-ayah dilewati karena sudah terhalang(mahjub) oleh Saudara laki-laki"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
         <TextView
             android:id="@+id/tvAnakLkSdrKd"
             android:layout_width="wrap_content"
