--- a/app/src/main/res/layout/activity_input8.xml
+++ b/app/src/main/res/layout/activity_input8.xml
@@ -22,6 +22,20 @@
             android:textSize="24sp"
             android:textStyle="bold" />
 
+
+        <TextView
+            android:id="@+id/tvNotifPaman"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="32dp"
+            android:text="Paman kandung dan Paman se-kakek dilewati karena sudah terhalang(mahjub) oleh Keponakan laki-laki"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
+
         <TextView
             android:id="@+id/tvPamanKd"
             android:layout_width="wrap_content"
