--- a/app/src/main/res/layout/activity_input9.xml
+++ b/app/src/main/res/layout/activity_input9.xml
@@ -23,6 +23,18 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tvNotifSepupu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginTop="32dp"
+            android:text="Sepupu laki-laki dari Paman kandung dan Sepupu laki-laki dari Paman se-kakek dilewati karena sudah terhalang(mahjub) oleh Paman"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
+        <TextView
             android:id="@+id/tvAnakLkPmnKd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
