--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bluecomb"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context="id.zakafikry.ewaris.InputActivity.ResultActivity">
 
     <LinearLayout
+        android:id="@+id/LLHarta"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -22,6 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
                 android:gravity="start"
                 android:text="Jumlah Peninggalan :"
                 android:textAppearance="@style/TextAppearance.AppCompat" />
@@ -65,6 +67,17 @@
                 android:gravity="start"
                 android:text="Harta yang siap dibagi :"
                 android:textAppearance="@style/TextAppearance.AppCompat" />
+
+            <TextView
+                android:id="@+id/tvKpk"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="2dp"
+                android:gravity="start"
+                android:text="Asal masalah :"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:visibility="gone" />
         </LinearLayout>
 
         <LinearLayout
@@ -77,6 +90,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp"
+                android:layout_marginTop="8dp"
                 android:gravity="end"
                 android:text="Rp. 200"
                 android:textAppearance="@style/TextAppearance.AppCompat" />
@@ -123,14 +137,28 @@
                 android:gravity="end"
                 android:text="Rp. 100"
                 android:textAppearance="@style/TextAppearance.AppCompat" />
+
+            <TextView
+                android:id="@+id/tvJkpk"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="2dp"
+                android:gravity="end"
+                android:text="-"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:visibility="gone" />
         </LinearLayout>
 
 
     </LinearLayout>
 
     <ScrollView
+        android:id="@+id/svtabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/LLHarta"
+        android:layout_marginTop="4dp"
         android:scrollbars="none">
 
         <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -140,7 +168,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
-            android:layout_marginTop="128dp"
             android:gravity="center"
             android:stretchColumns="*">
 
@@ -419,7 +446,6 @@
                     android:paddingLeft="4dp"
                     android:text="-"
                     android:textAppearance="@style/TextAppearance.AppCompat" />
-
 
             </TableRow>
 
@@ -1259,25 +1285,46 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="2">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/LLHarta">
 
-        <Button
-            android:id="@+id/btnHomeR"
+        <TextView
+            android:id="@+id/tvNoAW"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:text="Menu Utama" />
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Karena tidak ahli waris yang berhak menerima harta, harta waris dibagikan kepada Dzawil Arham"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnHomeR"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
+        android:background="@drawable/home" />
 
         <Button
             android:id="@+id/btnRepeat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:text="Ulang" />
-
-    </LinearLayout>
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
+            android:background="@drawable/redo" />
 
 </RelativeLayout>
